--- a/templates/yourworld.html
+++ b/templates/yourworld.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
-    <title>Your World of Text</title>
+    <title>Tools</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8"> 
     <link type="text/css" rel="stylesheet" href="/static/yourworld.css?v=1">
 	<link rel="shortcut icon" href="/static/favicon.png">
 </head>
 <body>
+<h1>Tools Upside Down</h1>
 <div id="topbar" class="ui">
     <div id="topbar_inner">
         <span id="paused" class="ui-vis tab">Paused</span>
